MarcoKitTests/TestData/error/object14.marco
--before
{
    "boo"[1]
}

--after
11-14: Whitespace required in a key-value pair
